# kronos-semi

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  M9_VERIFICATION_CHECKLIST.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml  run_m9_checks.sh
.claude/agents/: reviewer.md  worker.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  claude.yml  gpu-nightly.yml  publish-schemas.yml
benchmarks/diode_auger_1d/: README.md  diode_auger.json
benchmarks/diode_fermi_dirac_1d/: README.md  diode_fermi_dirac.json
benchmarks/diode_sine_1d/: README.md  diode_sine.json
benchmarks/diode_velsat_1d/: README.md  diode_velsat.json
benchmarks/hemt_2d/: README.md  hemt.json
benchmarks/mos_2d/: README.md  mos_cap.json
benchmarks/moscap_2d_axi/: moscap_axi.json
docs/: AGENTIC_DEVELOPMENT.md  ARCHITECTURE.md  EXAMPLES_CATALOGUE_STARTER_PROMPT.md  EXAMPLES_EXTENSION_STARTER_PROMPT.md  IMPROVEMENT_GUIDE.md  M14_3_STARTER_PROMPT.md  M15_STARTER_PROMPT.md  M16_1_STARTER_PROMPT.md  M16_2_STARTER_PROMPT.md  M16_3_STARTER_PROMPT.md  M16_4_STARTER_PROMPT.md  M16_5_STARTER_PROMPT.md  M16_6_STARTER_PROMPT.md  M16_7_STARTER_PROMPT.md  M16_M17_STARTER_PROMPT.md  M17_STARTER_PROMPT.md  M18_STARTER_PROMPT.md  M9_STARTER_PROMPT.md  PHYSICS.md  PHYSICS_AUDIT.md  PHYSICS_INTRO.md  ROADMAP.md  STATUS_AUDIT.md  WALKTHROUGH.md  day8-submission-log.md  gpu.md  index.md  m13.1-ci-followup-blocker.md  m13.1-followup-5-blocker.md  mms_dd_derivation.md  mos_derivation.md  resistor_derivation.md  submission-polish-log.md
examples/: README.md  web_demo.py
kronos_server/: __init__.py  app.py  config.py  jobs.py  models.py  progress.py  storage.py
notebooks/: 01_pn_junction_1d.ipynb  02_pn_junction_bias.ipynb  03_mos_cv.ipynb  03_moscap_axisym_cv.ipynb  04_resistor_3d.ipynb  05_moscap_2d_axi_cv.ipynb  05_moscap_axisym_cv.ipynb
prompts/: README.md  axisym_moscap.md  axisymmetric_moscap_cv.md  m15-phase-a.md
schemas/: input.v1.json  input.v2.json  manifest.v1.json
scripts/: add_geometry_mesh_cells.py  build_moscap_axisym_figs.py  build_notebook_01.py  build_notebook_02.py  build_notebook_03.py  build_notebook_04.py  build_notebook_05_moscap_axisym.py  debug_bc_ramp.py  diag_case0205_eps_sweep.py  diag_case05_eps_sweep.py  diag_case05_omega.py  diag_jacobian_consistency.py  m9_verify.sh  run_benchmark.py  run_verification.py  verify_sg_jacobian_fd.py
semi/: __init__.py  bcs.py  compute.py  constants.py  continuation.py  cv.py  diode_analytical.py  doping.py  geometry.py  hemt_analytical.py  materials.py  mesh.py  postprocess.py  results.py  run.py  scaling.py  schema.py  solver.py  timestepping.py
tests/: check_analytical_math.py  check_axisym_moscap_math.py  check_day1_math.py  check_moscap_axi_math.py  test_adaptive_dt_schema.py  test_artifact.py  test_axisym_moscap_math.py  test_axisym_scaling.py  test_bcs.py  test_bias_bcs.py  test_bipolar_sweep.py  test_compute_module.py  test_compute_schema.py  test_conservation_metrics.py  test_constants.py  test_continuation.py  test_convergence_helpers.py  test_coordinate_system.py  test_diode_analytical.py  test_doping.py  test_examples_register.py  test_geometry.py  test_hemt_analytical.py  test_heterojunction_fields.py  test_heterojunction_schema.py  test_kronos_server.py  test_lazy_imports.py  test_materials.py  test_mobility_closed_form.py  test_mobility_schema.py  test_moscap_axi_cv.py  test_moscap_axi_math.py  test_moscap_axisym_cv.py  test_moscap_axisym_cv_fem.py  test_mosfet_2d_verifier.py  test_recombination.py  test_run_shim.py  test_scaling.py  test_scharfetter_gummel.py  test_schema.py  (+13 more)
(+213 files in other folders)
