[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kronos-semi"
version = "0.13.0"
description = "JSON-driven FEM semiconductor device simulator on FEniCSx"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Robert Walker", email = "rwalkerlewis@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
# dolfinx is intentionally NOT a pip dependency: it's installed via conda,
# FEM-on-Colab, or system package manager. The pure-Python modules
# (schema, materials, scaling, doping, constants) work without it.
fem = []
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "nbformat>=5.0",
    "ruff>=0.1",
]
server = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.40",
    "httpx>=0.27,<0.29",
    "pydantic>=2.8,<3.0",
]

[project.scripts]
semi-run = "semi.io.cli:main"
kronos-server = "kronos_server.app:main"

[project.urls]
Repository = "https://github.com/rwalkerlewis/kronos-semi"
Issues = "https://github.com/rwalkerlewis/kronos-semi/issues"

[tool.hatch.build.targets.wheel]
packages = ["semi", "kronos_server"]
# Ship the JSON-schema companion files inside the wheel so `pip install
# kronos-semi` brings along `schemas/input.v1.json` (loaded by semi.schema
# at import time) and `schemas/manifest.v1.json` (used by semi.io.reader).
force-include = {"schemas" = "schemas"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["semi"]
branch = false
omit = [
    # CLI scaffolding — exercised end-to-end in the docker-fem CI step via
    # scripts/run_verification.py and `semi-run` invocations in benchmark
    # runners. Deliberately excluded from pytest coverage to keep the
    # threshold honest about what unit tests verify vs. what CI integration
    # verifies.
    "semi/io/cli.py",
]

[tool.coverage.report]
# Exclude pragmas, defensive runtime checks, CLI driver scaffolding, and
# the not-yet-implemented gmsh stub. CLI driver functions
# (`run_cli_study`, `report_table`, `write_artifacts`, etc.) are
# end-to-end exercised in the docker-fem CI step via
# `scripts/run_verification.py all`; they are deliberately excluded
# from pytest coverage to keep the threshold honest about what unit
# tests verify versus what CI integration verifies.
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING",
]
show_missing = true
precision = 1

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# N rules disabled globally: physics codebases use conventional names
# (N_A, N_D, V, F, J, psi_L, eps_Si, etc.) that don't follow PEP 8.
# Renaming them would hurt readability without improving correctness.
ignore = ["E501", "E741"]  # line length handled by formatter; ambiguous var names (I, l, O) allowed
